fixing scrolling issue on iOS sidebar

--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -37,12 +37,7 @@
 	.offCanvasBtn {	display: block;	}
 	.colHalf { float: none; width: 100%;}
 
-	.leftPanel { position: relative; padding:15px; float: none; clear: both; width: 100%; background-color: #fff; -webkit-overflow-scrolling: touch; }
-	.leftPanel::-webkit-scrollbar {
-		display: none;
-		height: 0;
-		width: 0;
-	}
+	.leftPanel { position: relative; padding:15px; float: none; clear: both; width: 100%; background-color: #fff; }
 
 	.brand { float: left; margin: 13px 0 0 0; width: 117px; background-position: right center; background: url('/images/logo.png') no-repeat; background-size: contain;}
 
@@ -93,6 +88,12 @@
 		padding:20px 0;
 		height:100%;
 		z-index: 10;
+		-webkit-overflow-scrolling: touch;
+	}
+	.leftTagsOuter::-webkit-scrollbar {
+		display: none;
+		height: 0;
+		width: 0;
 	}
 	.offCanvasOpen .leftTagsOuter { 
 		right: 0;
